# ROS-packages

./: README.md
catkin_ws/devel/: .catkin  setup.sh
catkin_ws/devel/lib/kinematics_demo/: fk_node  ik_linear  ik_node
catkin_ws/devel/lib/pick_n_place/: my_puma
catkin_ws/devel/lib/pkgconfig/: kinematics_demo.pc  pick_n_place.pc  puma560_description.pc  puma560_moveit_config.pc  rrr_description.pc  rrr_moveit_config.pc  scara_description.pc  scara_moveit_config.pc  traj_plan.pc  tutorial.pc  urdf_test_02.pc  workspace.pc
catkin_ws/devel/lib/traj_plan/: traj_plan  waypoint_pub
catkin_ws/devel/lib/tutorial/: listener  talker
catkin_ws/devel/lib/workspace/: reachable_ws_fk  reachable_ws_ik  simple_drawing
catkin_ws/src/pick_n_place/: CMakeLists.txt
catkin_ws/src/pick_n_place/launch/: my_moveit.rviz
catkin_ws/src/pick_n_place/src/: main.cpp
catkin_ws/src/puma560_moveit_config/: .setup_assistant  package.xml
catkin_ws/src/puma560_moveit_config/config/: Puma560.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
catkin_ws/src/puma560_moveit_config/launch/: moveit.rviz
catkin_ws/src/scara_moveit_config/launch/: moveit.rviz
catkin_ws/src/traj_plan/: CMakeLists.txt
catkin_ws/src/tutorial/: CMakeLists.txt  package.xml
catkin_ws/src/tutorial/src/: talker.cpp
catkin_ws/src/urdf_test_02/: CMakeLists.txt
catkin_ws/src/urdf_test_02/launch/: display.launch  gazebo.launch
catkin_ws/src/urdf_test_02/meshes/: base_link.STL
catkin_ws/src/urdf_test_02/urdf/: urdf_test_02.csv  urdf_test_02.urdf
new folder/: dh.hpp
(+14 files in other folders)
